# cmake_practice

./: .bash_history  .bashrc  .bashrc~  .emacs  .gitignore  .gitmodules  .vimrc  README.md
.emacs.d/auto-save-list/: .saves-11964-VM_126_14_centos~  .saves-12957-VM_126_14_centos~  .saves-14678-VM_126_14_centos~  .saves-14850-VM_126_14_centos~  .saves-17708-VM_126_14_centos~  .saves-1908-VM_126_14_centos~  .saves-19908-VM_126_14_centos~  .saves-20304-VM_126_14_centos~  .saves-24319-VM_126_14_centos~  .saves-27049-VM_126_14_centos~  .saves-29776-VM_126_14_centos~  .saves-30460-VM_126_14_centos~  .saves-31241-VM_126_14_centos~  .saves-336-VM_126_14_centos~  .saves-5521-VM_126_14_centos~  .saves-7110-VM_126_14_centos~  .saves-9292-VM_126_14_centos~
bert/: run_classifier.sh
co_swap/: ctx_swap.c  ctx_swap.h  test.c
co_swap/common/: GPATH  GRTAGS  GTAGS
common/: ThreadTimer.h
cpp_practice/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  mySortTest  testmain.cpp  testmain.cpp~
cpp_traits/: 00-builtin-type.cc  01-concrete.cc
hch/: cpp-vim.sh  in_cmake.md  in_docker-utils.md  in_git.md  in_github.md  in_ninja.md  in_tmux.md  in_ubuntu_source.md  linux.hpp  nfs.txt  note2020.h  start_docker_with_user.sh.sh  task_struct.hpp
note/: #more_effective_c++.h#  .#more_effective_c++.h  CMakeLists.txt  build.sh  cppstl.h  cppstl.h~  more_effective_c++  more_effective_c++.cpp  more_effective_c++.cpp~  more_effective_c++.h  more_effective_c++.h~  test  test.cpp
template/: CMakeLists.txt
template/include/: head.h
template/src/: main.cpp
template/sub1/: CMakeLists.txt
template/sub1/include/: myThreadPool.h  test_cast.h
template/sub1/src/: myThreadPool.cpp  mymethod.cpp  test_cast.cpp
tencentdays/: #strace.log#  CMakeLists.txt  CMakeLists.txt~  GPATH  GRTAGS  GTAGS  build.sh  build.sh~  core.23243  run.sh  run.sh~
tencentdays/Log/: CMakeLists.txt
tencentdays/ObjPoll/: CMakeLists.txt
tencentdays/ObjPoll/include/: test_obj.h
tencentdays/ObjPoll/src/: test_obj.cpp
tencentdays/ThreadPoll/: CMakeLists.txt
tencentdays/include/: head.h  head.h~
tencentdays/joy/: CMakeLists.txt
tencentdays/joy/include/: joy.h
tencentdays/joy/src/: joy.cpp  tokenization.cpp
tencentdays/src/: main.cpp  main.cpp~
tencentdays/sub1/include/: myMemoryPool.h
tencentdays/sub1/src/: myMemoryPool.cpp  test_cast.cpp
tencentdays/try_coroutine/: CMakeLists.txt
tencentdays/try_coroutine/include/: try_coroutine.h
tencentdays/try_coroutine/src/: try_coroutine.cpp  try_coroutine.cpp~
tencentdays/try_gdb/include/: gdb_try.h  gdb_try.h~
tencentdays/try_gdb/src/: gdb_try.cpp  gdb_try.cpp~
tencentdays/try_strace/: CMakeLists.txt  CMakeLists.txt~
tencentdays/try_strace/include/: gdb_try.h~  strace_try.h  strace_try.h~
tencentdays/try_strace/src/: gdb_try.cpp~  strace_try.cpp  strace_try.cpp~
tmp/: CMakeLists.txt  CMakeLists.txt~  build.sh  log.txt  mytest  test  test.cpp  test.cpp~
torch/: 00_grad.py
(+48 files in other folders)
